--- a/style.css
+++ b/style.css
@@ -7,9 +7,5 @@
 }
 
 [class^="icon-"], [class*=" icon-"]{
-    background:none!important;
-}
-
-.btn [class^="icon-"], .btn [class*=" icon-"] {
-    line-height: 1.3em;
-}
+    background:none;
+  }
