--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
-.hero, .resume {
+.hero, .resume, .portfolio {
     padding-block: 32px;
-    
-}
-.about > .container > .about-text {
-   font-size: 2rem;
-}
-
-[class^="icon-"], [class*=" icon-"]{
-    background:none;
   }
-
+  
+  .about > .container > .about-text {
+    font-size: 1.5rem;
+  }
+  
   input:focus:required:invalid {
     border: 2px solid red;
   }
